# dsutils

./: .env.example  .gitignore  AGENTS.md  README.md  mkdocs.yaml  pyproject.toml  ruff.toml
docs/: api.md  index.md
src/dsutils/: __init__.py
src/dsutils/ai/: __init__.py  clustering.py
src/dsutils/api/: __init__.py  client.py
src/dsutils/constants/: __init__.py
src/dsutils/data/: __init__.py  collections.py
src/dsutils/io/: __init__.py  json.py
src/dsutils/llm/: openai.py
src/dsutils/new_project/: __init__.py  project.py
src/dsutils/openai/: __init__.py  openai.py
tests/: __main__.py  test_api.py  test_io.py
